Fixed auto-spacing of main div

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,17 @@ body, html {
     font-size: 3em;
 }
 
+/* TODO 2/29 There's a whole mess in this CSS right now, trying to figure out currently how to get an adaptive margin above the .container div, and then after I figure that out, I am working on resizing based on screen width using media queries. Note that I did recently make a commit that changed the way that the footer css worked, which included changing margin-top to auto. */ 
+
+.body-main { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+}
+
+
+
 .container {
     width: var(--container-width);
     height: var(--container-height); 
@@ -81,12 +92,7 @@ body, html {
     background-color: #3a3a3a; 
     border: 5px solid;
     border-radius: 5px; 
-    margin: auto auto .25em auto; 
-    /* The position and top properties will move the main container slightly
-    above center, though seems like a bit of a makeshift solution. */
-    position: relative;  
-    top: -10px;
-
+    margin: auto auto .25em auto;
     display: flex; 
     flex-direction: column;
     justify-content: center; 
@@ -102,22 +108,22 @@ body, html {
     font-size: clamp(1em, 1.25em, 4vw);
 }
 
-/* @media all and (min-width: 1250px) {
+/* 
+@media all and (min-width: 1250px) {
     .directions { 
         width: 20%;
         margin: 0;  
         font-size: clamp(1em, 1.25em, 4vw);
-        display: inline;
+        display: inline-block;
     }
 
     .container {
        
         /* The position and top properties will move the main container slightly
-        above center, though seems like a bit of a makeshift solution. */
-/*  
-        position: relative;  
-        top: -10px;
+        above center, though seems like a bit of a makeshift solution. 
+*/
     
+/* 
         display: inline-flex; 
     }
 } */
@@ -287,7 +293,6 @@ footer {
 
 .footer-text {
     font-size: 16px;
-    /* padding: 10px; */
     font-weight: bold; 
 }
 
